Add monitoring stack with Prometheus, Grafana, Loki
Integrates Prometheus, Grafana, Loki, Promtail, cAdvisor, and mysqld-exporter into docker-compose for monitoring and observability. Adds provisioning for Grafana dashboards and datasources, Prometheus and Promtail configuration, and updates environment and database initialization for exporter access.

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DB_HOST=db
 DB_NAME=${MYSQL_DATABASE}
 DB_USER=${MYSQL_USER}
 DB_PASS=${MYSQL_PASSWORD}
+
+GRAFANA_USER=admin
+GRAFANA_PASS=supersecretpassword
