--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,9 +6,9 @@ scrape_configs:
     static_configs:
       - targets: ['prometheus:9090']
 
-  - job_name: cadvisor
+  - job_name: 'cadvisor'
     static_configs:
-      - targets: ['cadvisor:8000']
+      - targets: ['cadvisor:8080']
 
   - job_name: 'mysql'
     static_configs:
