Fix container name for mysqld-exporter service
Renamed the mysqld-exporter service's container_name from 'mysqld_exporter' to 'mysqld-exporter' in docker-compose.yml for consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - lempnet
 
   mysqld-exporter:
-    container_name: mysqld_exporter
+    container_name: mysqld-exporter
     image: prom/mysqld-exporter
     ports:
       - "9104:9104"
