Update mysqld-exporter config and docker-compose setup
Refactors mysqld-exporter service in docker-compose.yml to use explicit environment variables and command arguments for username and address. Adds a .my.cnf file for mysqld-exporter with connection credentials.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,10 @@ services:
     depends_on:
       - db
     environment:
-      - DATA_SOURCE_NAME=mysqld_exporter:exporterpass@(db:3306)/
+      - MYSQLD_EXPORTER_PASSWORD=exporterpass
+    command:
+      - '--mysqld.username=mysqld_exporter'
+      - '--mysqld.address=db:3306'
     networks:
       - lempnet
 
