Add Prometheus exporters for NGINX and node metrics
Added node-exporter and nginx-exporter services to docker-compose for system and NGINX metrics. Updated NGINX config to expose /nginx_status for Prometheus scraping. Extended Prometheus configuration to scrape metrics from the new exporters.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,27 @@ services:
     networks:
       - lempnet
 
+  node-exporter:
+    image: prom/node-exporter
+    ports:
+      - "9100:9100"
+    networks:
+      - lempnet
+
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:0.11.0
+    container_name: nginx-exporter
+    depends_on:
+      - nginx
+    environment:
+      - NGINX_STATUS_URL=http://nginx:80/nginx_status
+    ports:
+      - "9113:9113"
+    networks:
+      - lempnet
+
   mysqld-exporter:
+    container_name: mysqld-exporter
     image: prom/mysqld-exporter
     ports:
       - "9104:9104"
