--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,4 +25,10 @@ server {
         expires max;
         access_log off;
     }
+
+    # Metrics endpoint for Prometheus
+    location /nginx_status {
+        stub_status;
+        allow all;   # restrict in production
+    }
 }
