--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -13,3 +13,11 @@ scrape_configs:
   - job_name: 'mysql'
     static_configs:
       - targets: ['mysqld-exporter:9104']
+
+  - job_name: 'nginx'
+    static_configs:
+      - targets: ['nginx-exporter:9113']
+
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node-exporter:9100']
