Update nginx exporter config and stub_status location
Changed nginx-exporter to use the '--nginx.scrape-uri' command argument instead of the NGINX_STATUS_URL environment variable in docker-compose.yml. Moved the /nginx_status stub_status location in nginx/default.conf to be outside the commented block and clarified its placement.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,8 +58,8 @@ services:
     container_name: nginx-exporter
     depends_on:
       - nginx
-    environment:
-      - NGINX_STATUS_URL=http://nginx:80/nginx_status
+    command:
+      - '--nginx.scrape-uri=http://nginx/stub_status'
     ports:
       - "9113:9113"
     networks:
