Add container name and update PHP handling in configs
Set explicit container_name for node-exporter in docker-compose.yml. Updated nginx/default.conf to add an example PHP handling block with SCRIPT_FILENAME parameter for improved PHP file processing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - lempnet
 
   node-exporter:
+    container_name: node-exporter
     image: prom/node-exporter
     ports:
       - "9100:9100"
