--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,13 @@ server {
         allow all;   # restrict in production
     }
 
+    # PHP handling (example)
+    location ~ \.php$ {
+        fastcgi_pass php:9000;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
+    }
+    
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
