Update nginx status endpoint and clean up config
Changed Prometheus Nginx Exporter scrape URI in docker-compose.yml to /nginx_status. Cleaned up nginx/default.conf by removing redundant comments and duplicate PHP location block, and improved the /nginx_status location for clarity.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     depends_on:
       - nginx
     command:
-      - '--nginx.scrape-uri=http://nginx/stub_status'
+      - '-nginx.scrape-uri=http://nginx/nginx_status'
     ports:
       - "9113:9113"
     networks:
