--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,3 @@
-# nginx/default.conf
 server {
     listen 80;
     server_name _;
@@ -13,19 +12,13 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Metrics endpoint for Prometheus
+    # PROMETHEUS NGINX EXPORTER
     location /nginx_status {
         stub_status;
-        allow all;   # restrict in production
+        allow all;        # change to allow your internal IP in production
+        access_log off;
     }
 
-    # PHP handling (example)
-    location ~ \.php$ {
-        fastcgi_pass php:9000;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
-    }
-    
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
@@ -38,6 +31,4 @@ server {
         expires max;
         access_log off;
     }
-
-    
 }
